tests/suite/snapshots/suite__check__tests__check__bad-primitive1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-primitive1.xi:2:5]
   │
 2 │     x:int = false
   ·     ──┬──  
   ·       ╰──── Expected int but found bool
───╯

